# devsecops-workshop

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  devsecops-pipeline.yml  security-scan.yml
applications/frontend/: Dockerfile  README.md  package.json
applications/frontend/docker/: nginx.conf
applications/microservices/user-service/: Dockerfile  package.json
applications/microservices/user-service/src/: index.js
apps/backend/api/: Dockerfile  package.json
apps/frontend/: Dockerfile  package.json
docs/: 01-introduction.md  02-infrastructure-security.md  03-container-security.md  06-compliance.md  07-career-guide.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/cloudtrail/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/kms/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/security/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/security-groups/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/waf/: main.tf  outputs.tf  variables.tf
modules/01-infrastructure-security/docs/: README.md
modules/01-infrastructure-security/exercises/: 01-vpc-design.md
monitoring/prometheus/: prometheus.yml
scripts/deployment/: deploy-applications.sh  deploy-infrastructure.sh
scripts/setup/: check-prerequisites.sh  install-dependencies.sh  install-tools.sh
